Group update, TKDE

--- a/group.html
+++ b/group.html
@@ -328,6 +328,7 @@ $(document).ready(function () {
 <div id="postdocs" class="section level3">
 <h3>Postdocs</h3>
 <ul>
+<li><a href="https://www.amilasilva.com/">Amila Silva</a> (2023– ). Multi-modal learning for human-AI teaming.</li>
 <li><a href="https://www.ngmarchant.net/">Neil Marchant</a> (2021– ). Robustness, privacy, and generalisation in machine learning.</li>
 <li><a href="https://www.linkedin.com/in/andrew-cullen-67b04746/?originalSubdomain=au">Andrew Cullen</a> (2019– ). Certified robustness of machine learning.</li>
 </ul>
@@ -342,24 +343,24 @@ $(document).ready(function () {
 <li><a href="https://www.linkedin.com/in/guoxin-sun-338888162/">Guoxin Sun</a>. (w Tansu Alpcan, Seyit Camtepe 2020– ). Adversarial learning/game theory for autonomous systems.</li>
 <li><a href="https://scholar.google.com/citations?user=gjSlsnQAAAAJ&amp;hl=en">Ruihan Zhang</a> (w Tim Miller, Kris Ehinger 2019– ). Explainable AI and machine learning.</li>
 <li><a href="http://www.malinga.me/">Malinga Perera</a> (w Renata Borovica-Gajic 2018– ). Self-driving databases.</li>
-<li><a href="https://www.linkedin.com/in/bastian-oetomo-34300856/">Bastian Oetomo</a> (w Renata Borovica-Gajic 2018– ). Multi-armed bandits for database index selection.</li>
 </ul>
 </div>
 <div id="phd-studentscompleted" class="section level3">
 <h3>PhD students—Completed</h3>
 <ul>
+<li><a href="https://www.linkedin.com/in/bastian-oetomo-34300856/">Bastian Oetomo</a> (w Renata Borovica-Gajic 2018–23). Multi-armed bandits for database index selection → Postdoc at Univ Melbourne</li>
 <li><a href="https://www.linkedin.com/in/dongge-liu-9a957913a">Dongge Liu</a> (w Toby Murray, Thuan Pham, Gidon Ernst at LMU Munich 2018–22). Software fuzzing with machine learning → Open-Source Security at Google</li>
 <li><a href="https://www.ngmarchant.net/">Neil Marchant</a> (w Beka Steorts at Duke, Aurore Delaigle 2016–20). Bayesian record linkage, adaptive importance sampling for efficient evaluation → Postdoc at Univ Melbourne</li>
-<li><a href="https://au.linkedin.com/in/leyla-roohi-b4544a67">Leyla Roohi</a> (w Vanessa Teague 2017–19). Secure storage and private querying for telecommunications metadata → Postdoc at Univ Melbourne → Digital fraud analyst at ANZ Bank</li>
+<li><a href="https://au.linkedin.com/in/leyla-roohi-b4544a67">Leyla Roohi</a> (w Vanessa Teague 2017–19). Secure storage and private querying for telecommunications metadata → Postdoc at Univ Melbourne → Analytics at National Australia Bank</li>
 <li><a href="https://scholar.google.com/citations?user=qDDC09EAAAAJ&amp;hl=en">Yuan Li</a> (w Trevor Cohn 2015–19). Crowd sourcing, Bayesian optimisation, NLP → Postdoc at Univ Melbourne</li>
-<li><a href="https://www.researchgate.net/profile/Lingjuan_Lyu">Lingjuan Lyu</a> (w Marimuthu Palaniswami 2016–18). Privacy in distributed sensing → Postdoc at the ANU → Privacy Expert at Alipay, China</li>
+<li><a href="https://www.researchgate.net/profile/Lingjuan_Lyu">Lingjuan Lyu</a> (w Marimuthu Palaniswami 2016–18). Privacy in distributed sensing → Postdoc at the ANU → Head of Privacy and Security, Sony AI</li>
 <li><a href="https://sites.google.com/site/safiheidari/">Safiollah Heidari</a> (w Raj Buyya 2015–18). Distributed graph processing → Founder of NeuroPhyte</li>
 <li><a href="https://xunyunliu.github.io/">Xunyun Liu</a> (w Raj Buyya, Rodrigo Calheiros 2015–18). Stream computing → Assistant Prof at NUDT, China</li>
 <li><a href="https://www.researchgate.net/profile/Zay_Aye">Zay Aye</a> - CompSci (w Rao Kotagiri 2014–18). Learning distance metrics → Postdoc at Univ Melbourne (Infrastructure Engineering)</li>
-<li><a href="https://www.linkedin.com/in/yamuna-kankanige-8b258a26/">Yamuna Kankanige</a> (w James Bailey 2015–18). Predicting liver transplant outcomes with Austin Health → Bioinformatician at Peter MacCallum Cancer Centre</li>
-<li><a href="https://scholar.google.com.au/citations?user=1EPDwbAAAAAJ&amp;hl=en">Maryam Fanaeepour</a> - CompSci (w Lars Kulik, Egemen Tanin 2014–17). Location data privacy → Postdoc at Duke University → Researcher at Ghent University</li>
-<li><a href="https://scholar.google.com.au/citations?user=GtpWKiwAAAAJ&amp;hl=en">Jiazhen He</a> - CompSci (w James Bailey, Rui Zhang 2014–17). Education analytics and MOOCs → Postdoc at Univ Melbourne → Postdoc at AstraZeneca</li>
-<li><a href="https://www.researchgate.net/profile/Zuhe_Zhang">Zuhe Zhang</a> - Maths &amp; Stats (w Sanming Zhou 2014–17). Differential privacy in Bayesian statistics → Data Scientist at ANZ Bank → Data Scientist at Melbourne Business School</li>
+<li><a href="https://www.linkedin.com/in/yamuna-kankanige-8b258a26/">Yamuna Kankanige</a> (w James Bailey 2015–18). Predicting liver transplant outcomes with Austin Health → Senior Data Scientist, Peter MacCallum Cancer Centre</li>
+<li><a href="https://scholar.google.com.au/citations?user=1EPDwbAAAAAJ&amp;hl=en">Maryam Fanaeepour</a> - CompSci (w Lars Kulik, Egemen Tanin 2014–17). Location data privacy → Postdoc at Duke University → Specialist Manager, Data Science, Privacy, Trust at Deloitte</li>
+<li><a href="https://scholar.google.com.au/citations?user=GtpWKiwAAAAJ&amp;hl=en">Jiazhen He</a> - CompSci (w James Bailey, Rui Zhang 2014–17). Education analytics and MOOCs → Postdoc at Univ Melbourne → Associate Principal AI Scientist, AstraZeneca</li>
+<li><a href="https://www.researchgate.net/profile/Zuhe_Zhang">Zuhe Zhang</a> - Maths &amp; Stats (w Sanming Zhou 2014–17). Differential privacy in Bayesian statistics → Data Scientist at ANZ Bank → Data Scientist at Officeworks</li>
 </ul>
 </div>
 <div id="other-alumni" class="section level3">
