--- a/pubs.html
+++ b/pubs.html
@@ -346,6 +346,21 @@ $(document).ready(function () {
 </ul>
 
 <div class="bibox" style="display: none;">
+<pre><code id="bibtex-perera2023nodba">
+@article{perera2023nodba,
+  title = {No {DBA}? No regret! Multi-armed bandits for index tuning of analytical and {HTAP} workloads with provable guarantees},
+  author = {R. Malinga Perera and Bastian Oetomo and Benjamin I. P. Rubinstein and Renata Borovica-Gajic},
+  journal = {IEEE Transactions on Knowledge and Data Engineering},
+  year = {2023},
+  note = {Accepted},
+}
+</code></pre></div>
+
+<ul>
+<li>Perera, R. Malinga, Bastian Oetomo, Benjamin I. P. Rubinstein, and Renata Borovica-Gajic. “No DBA? No regret! Multi-armed bandits for index tuning of analytical and HTAP workloads with provable guarantees”. In: <em>IEEE Transactions on Knowledge and Data Engineering</em> (2023). Accepted. [<a href="https://arxiv.org/abs/2108.10130">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('perera2023nodba.bib', 'bibtex-perera2023nodba')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
 <pre><code id="bibtex-marchant2023bayesian">
 @article{marchant2023bayesian,
   title = {{B}ayesian Graphical Entity Resolution using Exchangeable Random Partition Priors},
@@ -376,20 +391,6 @@ $(document).ready(function () {
 </ul>
 
 <div class="bibox" style="display: none;">
-<pre><code id="bibtex-cullen2023predicting">
-@article{cullen2023predicting,
-  title = {Predicting dynamic spectrum allocation: a review covering simulation, modelling, and prediction},
-  author = {Andrew C. Cullen and Benjamin I. P. Rubinstein and Sithamparanathan Kandeepan and Barry Flower and Philip H. W. Leong},
-  journal = {Artificial Intelligence Review},
-  year = {2023},
-}
-</code></pre></div>
-
-<ul>
-<li>Cullen, Andrew C., Benjamin I. P. Rubinstein, Sithamparanathan Kandeepan, Barry Flower, and Philip H. W. Leong. “Predicting dynamic spectrum allocation: a review covering simulation, modelling, and prediction”. In: <em>Artificial Intelligence Review</em> (2023). [<a href="https://doi.org/10.1007/s10462-023-10449-9">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('cullen2023predicting.bib', 'bibtex-cullen2023predicting')">BibTeX</a>]</li>
-</ul>
-
-<div class="bibox" style="display: none;">
 <pre><code id="bibtex-sun2023an">
 @inproceedings{sun2023an,
   title = {An Adversarial Strategic Game for Machine Learning as a Service using System Features},
@@ -403,6 +404,20 @@ $(document).ready(function () {
 
 <ul>
 <li>Sun, Guoxin, Tansu Alpcan, Andrew C. Cullen, Seyit Camtepe, and Benjamin I. P. Rubinstein. “An Adversarial Strategic Game for Machine Learning as a Service using System Features”. In: <em>Proceedings of the 22nd International Conference on Autonomous Agents and Multiagent Systems</em>. AAMAS. Extended abstract. Accepted. 2023 [<a style="cursor: pointer;" onclick="DownloadToFile('sun2023an.bib', 'bibtex-sun2023an')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
+<pre><code id="bibtex-cullen2023predicting">
+@article{cullen2023predicting,
+  title = {Predicting dynamic spectrum allocation: a review covering simulation, modelling, and prediction},
+  author = {Andrew C. Cullen and Benjamin I. P. Rubinstein and Sithamparanathan Kandeepan and Barry Flower and Philip H. W. Leong},
+  journal = {Artificial Intelligence Review},
+  year = {2023},
+}
+</code></pre></div>
+
+<ul>
+<li>Cullen, Andrew C., Benjamin I. P. Rubinstein, Sithamparanathan Kandeepan, Barry Flower, and Philip H. W. Leong. “Predicting dynamic spectrum allocation: a review covering simulation, modelling, and prediction”. In: <em>Artificial Intelligence Review</em> (2023). [<a href="https://doi.org/10.1007/s10462-023-10449-9">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('cullen2023predicting.bib', 'bibtex-cullen2023predicting')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -905,21 +920,6 @@ $(document).ready(function () {
 
 <ul>
 <li>Wang, Song, Juan Balarezo, Sithamparanathan Kandeepan, Akram Al-Hourani, Karina Gomez, and Ben Rubinstein. “Machine Learning in Network Anomaly Detection: A Survey”. In: <em>IEEE Access</em> 9 (2021), pp. 152379-152396 [<a href="https://ieeexplore.ieee.org/document/9610045">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('wang2021machine.bib', 'bibtex-wang2021machine')">BibTeX</a>]</li>
-</ul>
-
-<div class="bibox" style="display: none;">
-<pre><code id="bibtex-perera2021nodba">
-@misc{perera2021nodba,
-  title = {No DBA? No regret! Multi-armed bandits for index tuning of analytical and HTAP workloads with provable guarantees},
-  author = {R. Malinga Perera and Bastian Oetomo and Benjamin I. P. Rubinstein and Renata Borovica-Gajic},
-  note = {arXiv:2108.10130 [cs.DB]},
-  year = {2021},
-  month = {Aug},
-}
-</code></pre></div>
-
-<ul>
-<li>Perera, R. Malinga, Bastian Oetomo, Benjamin I. P. Rubinstein, and Renata Borovica-Gajic. <em>No DBA? No regret! Multi-armed bandits for index tuning of analytical and HTAP workloads with provable guarantees</em>. arXiv:2108.10130 [cs.DB]. Aug. 2021 [<a href="https://arxiv.org/abs/2108.10130">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('perera2021nodba.bib', 'bibtex-perera2021nodba')">BibTeX</a>]</li>
 </ul>
 </div>
 <div id="section-3" class="section level3">
