NLP workshop, arxiv

--- a/pubs.html
+++ b/pubs.html
@@ -391,6 +391,21 @@ $(document).ready(function () {
 </ul>
 
 <div class="bibox" style="display: none;">
+<pre><code id="bibtex-he2023imbert">
+@inproceedings{he2023imbert,
+  title = {{IMBERT}: Making {BERT} Immune to Insertion-based Backdoor Attacks},
+  author = {Xuanli He and Jun Wang and Benjamin Rubinstein and Trevor Cohn},
+  booktitle = {Third Workshop on Trustworthy Natural Language Processing},
+  series = {TrustNLP},
+  year = {2023},
+}
+</code></pre></div>
+
+<ul>
+<li>He, Xuanli, Jun Wang, Benjamin Rubinstein, and Trevor Cohn. “IMBERT: Making BERT Immune to Insertion-based Backdoor Attacks”. In: <em>Third Workshop on Trustworthy Natural Language Processing</em>. TrustNLP. Co-located with ACL. Accepted. 2023 [<a style="cursor: pointer;" onclick="DownloadToFile('he2023imbert.bib', 'bibtex-he2023imbert')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
 <pre><code id="bibtex-sun2023an">
 @inproceedings{sun2023an,
   title = {An Adversarial Strategic Game for Machine Learning as a Service using System Features},
@@ -407,20 +422,6 @@ $(document).ready(function () {
 </ul>
 
 <div class="bibox" style="display: none;">
-<pre><code id="bibtex-cullen2023predicting">
-@article{cullen2023predicting,
-  title = {Predicting dynamic spectrum allocation: a review covering simulation, modelling, and prediction},
-  author = {Andrew C. Cullen and Benjamin I. P. Rubinstein and Sithamparanathan Kandeepan and Barry Flower and Philip H. W. Leong},
-  journal = {Artificial Intelligence Review},
-  year = {2023},
-}
-</code></pre></div>
-
-<ul>
-<li>Cullen, Andrew C., Benjamin I. P. Rubinstein, Sithamparanathan Kandeepan, Barry Flower, and Philip H. W. Leong. “Predicting dynamic spectrum allocation: a review covering simulation, modelling, and prediction”. In: <em>Artificial Intelligence Review</em> (2023). [<a href="https://doi.org/10.1007/s10462-023-10449-9">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('cullen2023predicting.bib', 'bibtex-cullen2023predicting')">BibTeX</a>]</li>
-</ul>
-
-<div class="bibox" style="display: none;">
 <pre><code id="bibtex-liu2023efficient">
 @inproceedings{liu2023efficient,
   title = {Efficient Index Learning via Model Reuse and Fine-tuning},
@@ -433,6 +434,20 @@ $(document).ready(function () {
 
 <ul>
 <li>Liu, Guanli, Jianzhong Qi, Lars Kulik, Kazuya Soga, Renata Borovica-Gajic, and Benjamin I. P. Rubinstein. “Efficient Index Learning via Model Reuse and Fine-tuning”. In: <em>International Workshop on Databases and Machine Learning</em>. DBML. Co-located with ICDE. Accepted. 2023 [<a style="cursor: pointer;" onclick="DownloadToFile('liu2023efficient.bib', 'bibtex-liu2023efficient')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
+<pre><code id="bibtex-cullen2023predicting">
+@article{cullen2023predicting,
+  title = {Predicting dynamic spectrum allocation: a review covering simulation, modelling, and prediction},
+  author = {Andrew C. Cullen and Benjamin I. P. Rubinstein and Sithamparanathan Kandeepan and Barry Flower and Philip H. W. Leong},
+  journal = {Artificial Intelligence Review},
+  year = {2023},
+}
+</code></pre></div>
+
+<ul>
+<li>Cullen, Andrew C., Benjamin I. P. Rubinstein, Sithamparanathan Kandeepan, Barry Flower, and Philip H. W. Leong. “Predicting dynamic spectrum allocation: a review covering simulation, modelling, and prediction”. In: <em>Artificial Intelligence Review</em> (2023). [<a href="https://doi.org/10.1007/s10462-023-10449-9">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('cullen2023predicting.bib', 'bibtex-cullen2023predicting')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -463,6 +478,21 @@ $(document).ready(function () {
 
 <ul>
 <li>Cullen, Andrew C., Paul Montague, Shijie Liu, Sarah M. Erfani, and Benjamin I. P. Rubinstein. <em>Exploiting Certified Defences to Attack Randomised Smoothing</em>. arXiv:2302.04379 [cs.LG]. Feb. 2023 [<a href="https://arxiv.org/abs/2302.04379">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('cullen2023exploiting.bib', 'bibtex-cullen2023exploiting')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
+<pre><code id="bibtex-he2023mitigating">
+@misc{he2023mitigating,
+  title = {Mitigating Backdoor Poisoning Attacks through the Lens of Spurious Correlation},
+  author = {Xuanli He and Qiongkai Xu and Jun Wang and Benjamin Rubinstein and Trevor Cohn},
+  note = {arXiv:2305.11596 [cs.CL]},
+  year = {2023},
+  month = {May},
+}
+</code></pre></div>
+
+<ul>
+<li>He, Xuanli, Qiongkai Xu, Jun Wang, Benjamin Rubinstein, and Trevor Cohn. <em>Mitigating Backdoor Poisoning Attacks through the Lens of Spurious Correlation</em>. arXiv:2305.11596 [cs.CL]. May. 2023 [<a href="https://arxiv.org/abs/2305.11596">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('he2023mitigating.bib', 'bibtex-he2023mitigating')">BibTeX</a>]</li>
 </ul>
 </div>
 <div id="section-1" class="section level3">
