AAAI23 pub details

--- a/pubs.html
+++ b/pubs.html
@@ -337,12 +337,12 @@ $(document).ready(function () {
   year = {2023},
   booktitle = {Proceedings of the 37th AAAI Conference on Artificial Intelligence},
   series = {AAAI},
-  note = {Accepted},
+  pages = {8861--8869},
 }
 </code></pre></div>
 
 <ul>
-<li>Liu, Shijie, Andrew C. Cullen, Paul Montague, Sarah Monazam Erfani, and Benjamin I. P. Rubinstein. “Enhancing the Antidote: Improved Pointwise Certifications against Poisoning Attacks”. In: <em>Proceedings of the 37th AAAI Conference on Artificial Intelligence</em>. AAAI. Accepted. 2023 [<a style="cursor: pointer;" onclick="DownloadToFile('liu2023enhancing.bib', 'bibtex-liu2023enhancing')">BibTeX</a>]</li>
+<li>Liu, Shijie, Andrew C. Cullen, Paul Montague, Sarah Monazam Erfani, and Benjamin I. P. Rubinstein. “Enhancing the Antidote: Improved Pointwise Certifications against Poisoning Attacks”. In: <em>Proceedings of the 37th AAAI Conference on Artificial Intelligence</em>. AAAI. 2023, pp. 8861-8869 [<a href="https://ojs.aaai.org/index.php/AAAI/article/view/26065">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('liu2023enhancing.bib', 'bibtex-liu2023enhancing')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
