--- a/group.html
+++ b/group.html
@@ -342,12 +342,12 @@ $(document).ready(function () {
 <li><a href="https://www.linkedin.com/in/jun-wang-15065b170/">Jun Wang</a>. (w Trevor Cohn 2020– ). Adversarial learning for NLP.</li>
 <li><a href="https://www.linkedin.com/in/guoxin-sun-338888162/">Guoxin Sun</a>. (w Tansu Alpcan, Seyit Camtepe 2020– ). Adversarial learning/game theory for autonomous systems.</li>
 <li><a href="https://scholar.google.com/citations?user=gjSlsnQAAAAJ&amp;hl=en">Ruihan Zhang</a> (w Tim Miller, Kris Ehinger 2019– ). Explainable AI and machine learning.</li>
-<li><a href="http://www.malinga.me/">Malinga Perera</a> (w Renata Borovica-Gajic 2018– ). Self-driving databases.</li>
 </ul>
 </div>
 <div id="phd-studentscompleted" class="section level3">
 <h3>PhD students—Completed</h3>
 <ul>
+<li><a href="http://www.malinga.me/">Malinga Perera</a> (w Renata Borovica-Gajic 2018–23). Self-driving databases → Software engineer at Amazon Web Services</li>
 <li><a href="https://www.linkedin.com/in/bastian-oetomo-34300856/">Bastian Oetomo</a> (w Renata Borovica-Gajic 2018–23). Multi-armed bandits for database index selection → Postdoc at Univ Melbourne</li>
 <li><a href="https://www.linkedin.com/in/dongge-liu-9a957913a">Dongge Liu</a> (w Toby Murray, Thuan Pham, Gidon Ernst at LMU Munich 2018–22). Software fuzzing with machine learning → Open-Source Security at Google</li>
 <li><a href="https://www.ngmarchant.net/">Neil Marchant</a> (w Beka Steorts at Duke, Aurore Delaigle 2016–20). Bayesian record linkage, adaptive importance sampling for efficient evaluation → Postdoc at Univ Melbourne</li>
