Oakland24, postdoc alum

--- a/group.html
+++ b/group.html
@@ -328,7 +328,6 @@ $(document).ready(function () {
 <div id="postdocs" class="section level3">
 <h3>Postdocs</h3>
 <ul>
-<li><a href="https://www.amilasilva.com/">Amila Silva</a> (2023– ). Multi-modal learning for human-AI teaming.</li>
 <li><a href="https://www.ngmarchant.net/">Neil Marchant</a> (2021– ). Robustness, privacy, and generalisation in machine learning.</li>
 <li><a href="https://www.linkedin.com/in/andrew-cullen-67b04746/?originalSubdomain=au">Andrew Cullen</a> (2019– ). Certified robustness of machine learning.</li>
 </ul>
@@ -366,6 +365,7 @@ $(document).ready(function () {
 <div id="other-alumni" class="section level3">
 <h3>Other Alumni</h3>
 <ul>
+<li><a href="https://www.amilasilva.com/">Amila Silva</a> (postdoc 2023–23). Multi-modal learning for human-AI teaming → Machine Learning Engineer, Canva</li>
 <li><a href="https://cis.unimelb.edu.au/people/prameesha-weerasinghe">Sandamal Weerasinghe</a> (postdoc 2019–21). Adversarial machine learning.</li>
 <li><a href="https://scholar.google.co.il/citations?user=en8SzLcAAAAJ&amp;hl=en">Roei Gelbhart</a> (student 2019–21). Robustness in machine learning.</li>
 <li><a href="https://changxu.io/">Chang Xu</a> (postdoc 2020–21). Adversarial learning for NLP → Data Scientist, News Corp, Sydney.</li>
