--- a/pubs.html
+++ b/pubs.html
@@ -330,6 +330,21 @@ $(document).ready(function () {
 <h3>2023</h3>
 
 <div class="bibox" style="display: none;">
+<pre><code id="bibtex-cullen2023its">
+@inproceedings{cullen2023its,
+  title = {It's Simplex! Disaggregating Measures to Improve Certified Robustness},
+  author = {Andrew C. Cullen and Paul Montague and Shijie Liu and Sarah Erfani and Benjamin I. P. Rubinstein},
+  year = {2023},
+  booktitle = {2024 IEEE Symposium on Security and Privacy (SP)},
+  note = {Accepted},
+}
+</code></pre></div>
+
+<ul>
+<li>Cullen, Andrew C., Paul Montague, Shijie Liu, Sarah Erfani, and Benjamin I. P. Rubinstein. “It’s Simplex! Disaggregating Measures to Improve Certified Robustness”. In: <em>2024 IEEE Symposium on Security and Privacy (SP)</em>. Accepted. 2023 [<a style="cursor: pointer;" onclick="DownloadToFile('cullen2023its.bib', 'bibtex-cullen2023its')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
 <pre><code id="bibtex-liu2023enhancing">
 @inproceedings{liu2023enhancing,
   title = {Enhancing the Antidote: Improved Pointwise Certifications against Poisoning Attacks},
