--- a/pubs.html
+++ b/pubs.html
@@ -364,6 +364,22 @@ $(document).ready(function () {
 </ul>
 
 <div class="bibox" style="display: none;">
+<pre><code id="bibtex-he2023mitigating">
+@inproceedings{he2023mitigating,
+  title = {Mitigating Backdoor Poisoning Attacks through the Lens of Spurious Correlation},
+  author = {Xuanli He and Qiongkai Xu and Jun Wang and Benjamin I. P. Rubinstein and Trevor Cohn},
+  booktitle = {The 2023 Conference on Empirical Methods in Natural Language Processing},
+  series = {EMNLP},
+  note = {Accepted},
+  year = {2023},
+}
+</code></pre></div>
+
+<ul>
+<li>He, Xuanli, Qiongkai Xu, Jun Wang, Benjamin I. P. Rubinstein, and Trevor Cohn. “Mitigating Backdoor Poisoning Attacks through the Lens of Spurious Correlation”. In: <em>The 2023 Conference on Empirical Methods in Natural Language Processing</em>. EMNLP. Accepted. 2023 [<a href="https://arxiv.org/abs/2305.11596">full</a>; <a style="cursor: pointer;" onclick="DownloadToFile('he2023mitigating.bib', 'bibtex-he2023mitigating')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
 <pre><code id="bibtex-liu2023enhancing">
 @inproceedings{liu2023enhancing,
   title = {Enhancing the Antidote: Improved Pointwise Certifications against Poisoning Attacks},
@@ -567,21 +583,6 @@ $(document).ready(function () {
 
 <ul>
 <li>Cullen, Andrew C., Paul Montague, Shijie Liu, Sarah M. Erfani, and Benjamin I. P. Rubinstein. <em>Exploiting Certified Defences to Attack Randomised Smoothing</em>. arXiv:2302.04379 [cs.LG]. Feb. 2023 [<a href="https://arxiv.org/abs/2302.04379">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('cullen2023exploiting.bib', 'bibtex-cullen2023exploiting')">BibTeX</a>]</li>
-</ul>
-
-<div class="bibox" style="display: none;">
-<pre><code id="bibtex-he2023mitigating">
-@misc{he2023mitigating,
-  title = {Mitigating Backdoor Poisoning Attacks through the Lens of Spurious Correlation},
-  author = {Xuanli He and Qiongkai Xu and Jun Wang and Benjamin Rubinstein and Trevor Cohn},
-  note = {arXiv:2305.11596 [cs.CL]},
-  year = {2023},
-  month = {May},
-}
-</code></pre></div>
-
-<ul>
-<li>He, Xuanli, Qiongkai Xu, Jun Wang, Benjamin Rubinstein, and Trevor Cohn. <em>Mitigating Backdoor Poisoning Attacks through the Lens of Spurious Correlation</em>. arXiv:2305.11596 [cs.CL]. May. 2023 [<a href="https://arxiv.org/abs/2305.11596">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('he2023mitigating.bib', 'bibtex-he2023mitigating')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
