RS-Del code & pub, PhD web

--- a/pubs.html
+++ b/pubs.html
@@ -360,7 +360,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Huang, Zhuoqun, Neil G Marchant, Keane Lucas, Lujo Bauer, Olga Ohrimenko, and Benjamin I. P. Rubinstein. “RS-Del: Edit Distance Robustness Certificates for Sequence Classifiers via Randomized Deletion”. In: <em>Advances in Neural Information Processing Systems</em>. NeurIPS. Accepted. 2023 [<a href="https://arxiv.org/abs/2302.01757">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('huang2023rsdel.bib', 'bibtex-huang2023rsdel')">BibTeX</a>]</li>
+<li>Huang, Zhuoqun, Neil G Marchant, Keane Lucas, Lujo Bauer, Olga Ohrimenko, and Benjamin I. P. Rubinstein. “RS-Del: Edit Distance Robustness Certificates for Sequence Classifiers via Randomized Deletion”. In: <em>Advances in Neural Information Processing Systems</em>. NeurIPS. Accepted. 2023 [<a href="https://arxiv.org/abs/2302.01757">PDF</a>; <a href="https://neurips.cc/virtual/2023/poster/70896">publisher link</a>; <a href="https://github.com/Dovermore/randomized-deletion">code</a>; <a style="cursor: pointer;" onclick="DownloadToFile('huang2023rsdel.bib', 'bibtex-huang2023rsdel')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
