--- a/group.html
+++ b/group.html
@@ -341,7 +341,7 @@ $(document).ready(function () {
 <li><a href="https://www.linkedin.com/in/jun-wang-15065b170/">Jun Wang</a>. (w Trevor Cohn 2020– ). Adversarial learning for NLP.</li>
 <li><a href="https://www.linkedin.com/in/shijie-liu-9162b8151/">Shijie Liu</a>. (w Sarah Erfani, Paul Montague, Andrew Cullen 2021– ). Certified robustness at training time.</li>
 <li><a href="https://github.com/Dovermore">Zhuoqun (Calvin) Huang</a>. (w Olya Ohrimenko, Neil Marchant 2021– ). Certified robustness in computer security applications.</li>
-<li><a href="https://cis.unimelb.edu.au/people/students/jiankai-jin">Jiankai Jin</a>. (w Olya Ohrimenko 2021– ). Systems security of differential privacy.</li>
+<li><a href="https://jason-jiankai.github.io/">Jiankai Jin</a>. (w Olya Ohrimenko 2021– ). Systems security of differential privacy.</li>
 </ul>
 </div>
 <div id="phd-studentscompleted" class="section level3">
