Code for Guoxin paper

--- a/pubs.html
+++ b/pubs.html
@@ -764,7 +764,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Sun, Guoxin, Tansu Alpcan, Benjamin I. P. Rubinstein, and Seyit Camtepe. “Securing Cyber-Physical Systems: Physics-Enhanced Adversarial Learning for Autonomous Platoons”. In: <em>European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases</em>. ECML-PKDD. Accepted. 2022 [<a style="cursor: pointer;" onclick="DownloadToFile('sun2022securing.bib', 'bibtex-sun2022securing')">BibTeX</a>]</li>
+<li>Sun, Guoxin, Tansu Alpcan, Benjamin I. P. Rubinstein, and Seyit Camtepe. “Securing Cyber-Physical Systems: Physics-Enhanced Adversarial Learning for Autonomous Platoons”. In: <em>European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases</em>. ECML-PKDD. Accepted. 2022 [<a href="https://github.com/garrisonsun/Securing-Cyber-Physical-Systems">code</a>; <a style="cursor: pointer;" onclick="DownloadToFile('sun2022securing.bib', 'bibtex-sun2022securing')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
