--- a/pubs.html
+++ b/pubs.html
@@ -453,13 +453,13 @@ $(document).ready(function () {
   journal = {IEEE Transactions on Information Forensics and Security},
   title = {To Act or Not To Act: An Adversarial Game for Securing Vehicle Platoons},
   year = {2023},
-  pages = {16},
-  note = {Accepted},
+  pages = {164--177},
+  volume = {19},
 }
 </code></pre></div>
 
 <ul>
-<li>Sun, Guoxin, Tansu Alpcan, Benjamin I. P. Rubinstein, and Seyit Camtepe. “To Act or Not To Act: An Adversarial Game for Securing Vehicle Platoons”. In: <em>IEEE Transactions on Information Forensics and Security</em> (2023). Accepted, p. 16 [<a href="https://ieeexplore.ieee.org/document/10266364">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('sun2023to.bib', 'bibtex-sun2023to')">BibTeX</a>]</li>
+<li>Sun, Guoxin, Tansu Alpcan, Benjamin I. P. Rubinstein, and Seyit Camtepe. “To Act or Not To Act: An Adversarial Game for Securing Vehicle Platoons”. In: <em>IEEE Transactions on Information Forensics and Security</em> 19 (2023), pp. 164-177 [<a href="https://ieeexplore.ieee.org/document/10266364">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('sun2023to.bib', 'bibtex-sun2023to')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
