--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>index.knit</title>
+<title> </title>
 
 <script src="site_libs/header-attrs-2.25/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -289,10 +289,16 @@ $(document).ready(function () {
 
 
 
+<h1 class="title toc-ignore"> </h1>
 
 </div>
 
 
+<head>
+<title>
+Ben Rubinstein
+</title>
+</head>
 <p><link rel="stylesheet" href="styles.css" type="text/css"></p>
 <p><br></p>
 <p><img src="images/Ben1.jpg" style="width:30%; border:12px solid; margin-right: 24px" align="left"></p>
