--- a/index.html
+++ b/index.html
@@ -305,30 +305,32 @@ Ben Rubinstein
 <strong>Benjamin I. P. Rubinstein</strong>, PhD (Berkeley)<br>
 <p style="font-size:16px">
 Professor &amp; AI co-lead, <em>School of Computing and Information
-Systems</em><br> Associate Dean (Research), <em>Faculty of Engineering
-and Information Technology</em><br> <em>The University of Melbourne,
-Australia</em>
+Systems</em><br> Deputy Dean Research (Interim), <em>Faculty of
+Engineering and Information Technology</em><br> <em>The University of
+Melbourne, Australia</em>
 </p>
 <p>I actively research topics in machine learning, particularly security
 and privacy implications of AI, such as adversarial learning,
 differential privacy and record linkage. Prior to joining the University
 of Melbourne in 2013, I enjoyed four years in industry research labs
 including Microsoft Research Silicon Valley and IBM Research Australia,
-and received the PhD (Computer Science) from UC Berkeley in 2010. I have
-been part of teams that have: analysed privacy at the Australian Bureau
-of Statistics, National Australia Bank, and Transport for NSW;
-robustness of translation systems to data poisoning attacks with
-Facebook (Meta); helped identify and plug side-channel attacks against
-the Firefox browser; deanonymised Victorian Myki transport data and an
-unprecedented Australian Medicare data release, prompting introduction
-of the Re-identification Offence Bill 2016; developed scalable Bayesian
-approaches to record linkage tested by U.S. Census; and shipped
-production systems for record linkage in Bing and the Xbox360. Since
-joining Melbourne in 2013, I have been awarded $9.42m in competitive
-funding ($6.2m as lead) to my institution. Starting 2021, I am
-co-leading <a href="https://catch-muri.org">CATCH MURI</a> which
-convenes a team of 16 experts across 6 US/AUS universities for
-fundamental discovery in robust human-AI teams for cybersecurity.</p>
+and received the PhD (Computer Science) from UC Berkeley in 2010. I’m
+currently a full professor and interim Deputy Dean (Research), and was
+Associate Dean (Research) 2020–2023. I have been part of teams that
+have: analysed privacy at the Australian Bureau of Statistics, National
+Australia Bank, and Transport for NSW; robustness of translation systems
+to data poisoning attacks with Facebook (Meta); helped identify and plug
+side-channel attacks against the Firefox browser; deanonymised Victorian
+Myki transport data and an unprecedented Australian Medicare data
+release, prompting introduction of the Re-identification Offence Bill
+2016; developed scalable Bayesian approaches to record linkage tested by
+U.S. Census; and shipped production systems for record linkage in Bing
+and the Xbox360. Since joining Melbourne in 2013, I have been awarded
+$9.42m in competitive funding ($6.2m as lead) to my institution.
+Starting 2021, I am co-leading <a href="https://catch-muri.org">CATCH
+MURI</a> which convenes a team of 16 experts across 6 US/AUS
+universities for fundamental discovery in robust human-AI teams for
+cybersecurity.</p>
 
 
 
