--- a/pubs.html
+++ b/pubs.html
@@ -683,7 +683,8 @@ href="https://arxiv.org/abs/2205.10159">PDF</a>;
   booktitle = {Advances in Neural Information Processing Systems},
   series = {NeurIPS},
   year = {2022},
-  note = {Accepted},
+  pages = {19099--19112},
+  volume = {35},
 }
 </code></pre></div>
 
@@ -691,9 +692,11 @@ href="https://arxiv.org/abs/2205.10159">PDF</a>;
 <li>Cullen, Andrew C., Paul Montague, Shijie Liu, Sarah Monazam Erfani,
 and Benjamin I. P. Rubinstein. “Double Bubble, Toil and Trouble:
 Enhancing Certified Robustness through Transitivity”. In: <em>Advances
-in Neural Information Processing Systems</em>. NeurIPS. Accepted. 2022
-[<span style="color:red">Selected as Oral (7% of papers)</span>; <a
-href="https://arxiv.org/abs/2210.06077">full</a>; <a
+in Neural Information Processing Systems</em>. Vol. 35. NeurIPS. 2022,
+pp. 19099-19112 [<span style="color:red">Selected as Oral (7% of
+papers)</span>; <a
+href="https://proceedings.neurips.cc/paper_files/paper/2022/hash/79a0c8e7ae8e403e39341ea6b0ba4c21-Abstract-Conference.html">publisher
+link</a>; <a href="https://arxiv.org/abs/2210.06077">full</a>; <a
 href="https://github.com/andrew-cullen/DoubleBubble">code</a>; <a
 href="https://recorder-v3.slideslive.com/#/share?share=74042&amp;s=8b0cbca4-1e05-445d-a46b-c33fae65a4f8">video</a>;
 <a style="cursor: pointer;" onclick="DownloadToFile('cullen2022double.bib', 'bibtex-cullen2022double')">BibTeX</a>]</li>
@@ -706,8 +709,8 @@ href="https://recorder-v3.slideslive.com/#/share?share=74042&amp;s=8b0cbca4-1e05
   author = {J. Hyam Rubinstein and Benjamin I. P. Rubinstein},
   booktitle = {Advances in Neural Information Processing Systems},
   series = {NeurIPS},
-  note = {Accepted},
   year = {2022},
+  pages = {13078--13090},
 }
 </code></pre></div>
 
@@ -715,8 +718,9 @@ href="https://recorder-v3.slideslive.com/#/share?share=74042&amp;s=8b0cbca4-1e05
 <li>Rubinstein, J. Hyam and Benjamin I. P. Rubinstein. “Unlabelled
 Sample Compression Schemes for Intersection-Closed Classes and Extremal
 Classes”. In: <em>Advances in Neural Information Processing
-Systems</em>. NeurIPS. Accepted. 2022 [<a
-href="https://arxiv.org/abs/2210.05455">full</a>; <a
+Systems</em>. NeurIPS. 2022, pp. 13078-13090 [<a
+href="https://proceedings.neurips.cc/paper_files/paper/2022/hash/54d6a55225cebbdc16fbb0e45c5bdf2b-Abstract-Conference.html">publisher
+link</a>; <a href="https://arxiv.org/abs/2210.05455">full</a>; <a
 href="https://recorder-v3.slideslive.com/#/share?share=76156&amp;s=b89c0ea6-8bc0-4472-aa51-c1632814b669">video</a>;
 <a style="cursor: pointer;" onclick="DownloadToFile('rubinstein2022unlabelled.bib', 'bibtex-rubinstein2022unlabelled')">BibTeX</a>]</li>
 </ul>
