--- a/group.html
+++ b/group.html
@@ -311,10 +311,6 @@ Robustness, privacy, and generalisation in machine learning.</li>
 <div id="phd-students" class="section level3">
 <h3>PhD students</h3>
 <ul>
-<li><a
-href="https://scholar.google.com/citations?user=gjSlsnQAAAAJ&amp;hl=en">Ruihan
-Zhang</a> (w Tim Miller, Kris Ehinger 2019– ). Explainable AI and
-machine learning.</li>
 <li><a href="https://www.linkedin.com/in/guoxin-sun-338888162/">Guoxin
 Sun</a>. (w Tansu Alpcan, Seyit Camtepe 2020– ). Adversarial
 learning/game theory for autonomous systems.</li>
@@ -324,15 +320,19 @@ Wang</a>. (w Trevor Cohn 2020– ). Adversarial learning for NLP.</li>
 Liu</a>. (w Sarah Erfani, Paul Montague, Andrew Cullen 2021– ).
 Certified robustness at training time.</li>
 <li><a href="https://github.com/Dovermore">Zhuoqun (Calvin) Huang</a>.
-(w Olya Ohrimenko, Neil Marchant 2021– ). Certified robustness in
-computer security applications.</li>
+(w Olya Ohrimenko, Neil Marchant 2021– ). Certified robustness for
+discrete data.</li>
 <li><a href="https://jason-jiankai.github.io/">Jiankai Jin</a>. (w Olya
 Ohrimenko 2021– ). Systems security of differential privacy.</li>
+<li>Maria Bulychev. (w Neil Marchant 2024– ). Adversarial learning.</li>
 </ul>
 </div>
 <div id="phd-studentscompleted" class="section level3">
 <h3>PhD students—Completed</h3>
 <ul>
+<li><a
+href="https://scholar.google.com/citations?user=gjSlsnQAAAAJ&amp;hl=en">Ruihan
+Zhang</a> (w Tim Miller, Kris Ehinger 2019–24). Explainable AI</li>
 <li><a href="http://www.malinga.me/">Malinga Perera</a> (w Renata
 Borovica-Gajic 2018–23). Self-driving databases → Software engineer at
 Amazon Web Services</li>
