--- a/pubs.html
+++ b/pubs.html
@@ -325,6 +325,26 @@ and Privacy (SP)</em>. Accepted. 2024 [<a
 href="https://arxiv.org/abs/2309.11005">PDF</a>;
 <a style="cursor: pointer;" onclick="DownloadToFile('cullen2023its.bib', 'bibtex-cullen2023its')">BibTeX</a>]</li>
 </ul>
+
+<div class="bibox" style="display: none;">
+<pre><code id="bibtex-jin2024elephants">
+@misc{jin2024elephants,
+  title = {Elephants Do Not Forget: Differential Privacy with State Continuity for Privacy Budget },
+  author = {Jiankai Jin and Chitchanok Chuengsatiansup and Toby Murray and Benjamin I. P. Rubinstein and Yuval Yarom and Olga Ohrimenko},
+  note = {arXiv:2401.17628 [cs.CR]},
+  year = {2024},
+  month = {Jan},
+}
+</code></pre></div>
+
+<ul>
+<li>Jin, Jiankai, Chitchanok Chuengsatiansup, Toby Murray, Benjamin I.
+P. Rubinstein, Yuval Yarom, and Olga Ohrimenko. <em>Elephants Do Not
+Forget: Differential Privacy with State Continuity for Privacy Budget
+</em>. arXiv:2401.17628 [cs.CR]. Jan. 2024 [<a
+href="https://arxiv.org/abs/2401.17628">PDF</a>;
+<a style="cursor: pointer;" onclick="DownloadToFile('jin2024elephants.bib', 'bibtex-jin2024elephants')">BibTeX</a>]</li>
+</ul>
 </div>
 <div id="section-1" class="section level3">
 <h3>2023</h3>
