--- a/group.html
+++ b/group.html
@@ -324,6 +324,9 @@ Certified robustness at training time.</li>
 discrete data.</li>
 <li><a href="https://jason-jiankai.github.io/">Jiankai Jin</a>. (w Olya
 Ohrimenko 2021– ). Systems security of differential privacy.</li>
+<li><a
+href="https://cis.unimelb.edu.au/people/students/jiacheng-zhang">Jiacheng
+Zhang</a>. (w Feng Liu 2023– ). Trustworthy ML.</li>
 <li>Maria Bulychev. (w Neil Marchant 2024– ). Adversarial learning.</li>
 </ul>
 </div>
