--- a/group.html
+++ b/group.html
@@ -328,6 +328,9 @@ Ohrimenko 2021– ). Systems security of differential privacy.</li>
 href="https://cis.unimelb.edu.au/people/students/jiacheng-zhang">Jiacheng
 Zhang</a>. (w Feng Liu 2023– ). Trustworthy ML.</li>
 <li>Maria Bulychev. (w Neil Marchant 2024– ). Adversarial learning.</li>
+<li><a
+href="https://www.linkedin.com/in/wenqi-yan-082a18223/?trk=people-guest_people_search-card&amp;originalSubdomain=au">Wenqi
+Yan</a>. (w Thuan Pham, Toby Murray 2024– ). Software fuzzing.</li>
 </ul>
 </div>
 <div id="phd-studentscompleted" class="section level3">
