--- a/pubs.html
+++ b/pubs.html
@@ -327,6 +327,26 @@ href="https://arxiv.org/abs/2309.11005">PDF</a>;
 </ul>
 
 <div class="bibox" style="display: none;">
+<pre><code id="bibtex-wang2024backdoor">
+@inproceedings{wang2024backdoor,
+  title = {Backdoor Attacks on Multilingual Machine Translation},
+  author = {Jun Wang and Qiongkai Xu and Xuanli He and Benjamin I. P. Rubinstein and Trevor Cohn},
+  booktitle = {Proceedings of the 2024 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies},
+  series = {NAACL},
+  note = {Accepted},
+  year = {2024},
+}
+</code></pre></div>
+
+<ul>
+<li>Wang, Jun, Qiongkai Xu, Xuanli He, Benjamin I. P. Rubinstein, and
+Trevor Cohn. “Backdoor Attacks on Multilingual Machine Translation”. In:
+<em>Proceedings of the 2024 Conference of the North American Chapter of
+the Association for Computational Linguistics: Human Language
+Technologies</em>. NAACL. Accepted. 2024 [<a style="cursor: pointer;" onclick="DownloadToFile('wang2024backdoor.bib', 'bibtex-wang2024backdoor')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
 <pre><code id="bibtex-jin2024elephants">
 @misc{jin2024elephants,
   title = {Elephants Do Not Forget: Differential Privacy with State Continuity for Privacy Budget },
