--- a/group.html
+++ b/group.html
@@ -304,8 +304,6 @@ href="https://www.linkedin.com/in/andrew-cullen-67b04746/?originalSubdomain=au">
 Cullen</a> (2019– ). Certified robustness of machine learning.</li>
 <li><a href="https://www.ngmarchant.net/">Neil Marchant</a> (2021– ).
 Robustness, privacy, and generalisation in machine learning.</li>
-<li><a href="https://arekavandi.github.io/">Aref Miri Rekavandi</a>
-(2023– ). Robust learning.</li>
 </ul>
 </div>
 <div id="phd-students" class="section level3">
@@ -399,12 +397,16 @@ Scientist at Officeworks</li>
 <div id="other-alumni" class="section level3">
 <h3>Other Alumni</h3>
 <ul>
+<li><a href="https://arekavandi.github.io/">Aref Miri Rekavandi</a>
+(psotdoc 2023–24). Certified robustness → Postdoc, University of
+Oxford</li>
 <li><a href="https://www.amilasilva.com/">Amila Silva</a> (postdoc
 2023–23). Multi-modal learning for human-AI teaming → Machine Learning
 Engineer, Canva</li>
 <li><a
 href="https://cis.unimelb.edu.au/people/prameesha-weerasinghe">Sandamal
-Weerasinghe</a> (postdoc 2019–21). Adversarial machine learning.</li>
+Weerasinghe</a> (postdoc 2019–21). Adversarial machine learning → Energy
+and Forecasting Analyst, ZEN Energy (startup)</li>
 <li><a
 href="https://scholar.google.co.il/citations?user=en8SzLcAAAAJ&amp;hl=en">Roei
 Gelbhart</a> (student 2019–21). Robustness in machine learning.</li>
