--- a/pubs.html
+++ b/pubs.html
@@ -343,7 +343,9 @@ href="https://arxiv.org/abs/2309.11005">PDF</a>;
 Trevor Cohn. “Backdoor Attacks on Multilingual Machine Translation”. In:
 <em>Proceedings of the 2024 Conference of the North American Chapter of
 the Association for Computational Linguistics: Human Language
-Technologies</em>. NAACL. Accepted. 2024 [<a style="cursor: pointer;" onclick="DownloadToFile('wang2024backdoor.bib', 'bibtex-wang2024backdoor')">BibTeX</a>]</li>
+Technologies</em>. NAACL. Accepted. 2024 [<a
+href="https://arxiv.org/abs/2404.02393">PDF</a>;
+<a style="cursor: pointer;" onclick="DownloadToFile('wang2024backdoor.bib', 'bibtex-wang2024backdoor')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
