--- a/pubs.html
+++ b/pubs.html
@@ -327,6 +327,25 @@ href="https://arxiv.org/abs/2309.11005">PDF</a>;
 </ul>
 
 <div class="bibox" style="display: none;">
+<pre><code id="bibtex-he2024seep">
+@article{he2024seep,
+  title = {{SEEP}: Training Dynamics Grounds Latent Representation Search for Mitigating Backdoor Poisoning Attacks},
+  author = {Xuanli He and Qiongkai Xu and Jun Wang and Benjamin I. P. Rubinstein and Trevor Cohn},
+  journal = {Transactions of the Association for Computational Linguistics (TACL)},
+  year = {2024},
+  note = {Accepted},
+}
+</code></pre></div>
+
+<ul>
+<li>He, Xuanli, Qiongkai Xu, Jun Wang, Benjamin I. P. Rubinstein, and
+Trevor Cohn. “SEEP: Training Dynamics Grounds Latent Representation
+Search for Mitigating Backdoor Poisoning Attacks”. In: <em>Transactions
+of the Association for Computational Linguistics (TACL)</em> (2024).
+Accepted. [<a style="cursor: pointer;" onclick="DownloadToFile('he2024seep.bib', 'bibtex-he2024seep')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
 <pre><code id="bibtex-wang2024backdoor">
 @inproceedings{wang2024backdoor,
   title = {Backdoor Attacks on Multilingual Machine Translation},
@@ -346,6 +365,30 @@ the Association for Computational Linguistics: Human Language
 Technologies</em>. NAACL. Accepted. 2024 [<a
 href="https://arxiv.org/abs/2404.02393">PDF</a>;
 <a style="cursor: pointer;" onclick="DownloadToFile('wang2024backdoor.bib', 'bibtex-wang2024backdoor')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
+<pre><code id="bibtex-ortiz2024mitigating">
+@inproceedings{ortiz2024mitigating,
+  title = {Mitigating Challenges of the Space Environment for Onboard Artificial Intelligence: Design Overview of the Imaging Payload on {SpIRIT}},
+  year = {2024},
+  author = {Miguel {Ortiz del Castillo} and Jonathan Morgan and Jack McRobbie and Clint Therakam and Zaher Joukhadar and Robert Mearns and Simon Barraclough and Richard Sinnott and Andrew Woods and Chris Bayliss and Kris Ehinger and Ben Rubinstein and James Bailey and Airlie Chapman and Michele Trenti},
+  booktitle = {3rd Workshop on AI for Space},
+  series = {AI4Space},
+  note = {Accepted; co-located with CVPR2024},
+}
+</code></pre></div>
+
+<ul>
+<li>Ortiz del Castillo, Miguel, Jonathan Morgan, Jack McRobbie, Clint
+Therakam, Zaher Joukhadar, Robert Mearns, Simon Barraclough, Richard
+Sinnott, Andrew Woods, Chris Bayliss, Kris Ehinger, Ben Rubinstein,
+James Bailey, Airlie Chapman, and Michele Trenti. “Mitigating Challenges
+of the Space Environment for Onboard Artificial Intelligence: Design
+Overview of the Imaging Payload on SpIRIT”. In: <em>3rd Workshop on AI
+for Space</em>. AI4Space. Accepted; co-located with CVPR2024. 2024 [<a
+href="https://arxiv.org/abs/2404.08399">PDF</a>;
+<a style="cursor: pointer;" onclick="DownloadToFile('ortiz2024mitigating.bib', 'bibtex-ortiz2024mitigating')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
