--- a/group.html
+++ b/group.html
@@ -304,6 +304,9 @@ href="https://www.linkedin.com/in/andrew-cullen-67b04746/?originalSubdomain=au">
 Cullen</a> (2019– ). Certified robustness of machine learning.</li>
 <li><a href="https://www.ngmarchant.net/">Neil Marchant</a> (2021– ).
 Robustness, privacy, and generalisation in machine learning.</li>
+<li><a
+href="https://scholar.google.com/citations?user=6e-e6Q4AAAAJ">Ying
+Zhao</a> (2024– ). Differential privacy.</li>
 </ul>
 </div>
 <div id="phd-students" class="section level3">
