--- a/pubs.html
+++ b/pubs.html
@@ -392,6 +392,26 @@ href="https://arxiv.org/abs/2404.08399">PDF</a>;
 </ul>
 
 <div class="bibox" style="display: none;">
+<pre><code id="bibtex-he2024transferring">
+@misc{he2024transferring,
+  title = {Transferring Troubles: Cross-Lingual Transferability of Backdoor Attacks in LLMs with Instruction Tuning},
+  author = {Xuanli He and Jun Wang and Qiongkai Xu and Pasquale Minervini and Pontus Stenetorp and Benjamin I. P. Rubinstein and Trevor Cohn},
+  note = {arXiv:2404.19597 [cs.CL]},
+  year = {2024},
+  month = {May},
+}
+</code></pre></div>
+
+<ul>
+<li>He, Xuanli, Jun Wang, Qiongkai Xu, Pasquale Minervini, Pontus
+Stenetorp, Benjamin I. P. Rubinstein, and Trevor Cohn. <em>Transferring
+Troubles: Cross-Lingual Transferability of Backdoor Attacks in LLMs with
+Instruction Tuning</em>. arXiv:2404.19597 [cs.CL]. May. 2024 [<a
+href="https://arxiv.org/abs/2404.19597">PDF</a>;
+<a style="cursor: pointer;" onclick="DownloadToFile('he2024transferring.bib', 'bibtex-he2024transferring')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
 <pre><code id="bibtex-jin2024elephants">
 @misc{jin2024elephants,
   title = {Elephants Do Not Forget: Differential Privacy with State Continuity for Privacy Budget },
