--- a/pubs.html
+++ b/pubs.html
@@ -307,6 +307,27 @@ are <a href="impact.html#policy_submissions">here</a>.</p>
 <h3>2024</h3>
 
 <div class="bibox" style="display: none;">
+<pre><code id="bibtex-cullen2024et">
+@inproceedings{cullen2024et,
+  title = {Et Tu Certifications: Robustness Certificates Yield Better Adversarial Examples},
+  author = {Andrew C. Cullen and Paul Montague and Shijie Liu and Sarah M. Erfani and Benjamin I. P. Rubinstein},
+  year = {2024},
+  booktitle = {Proceedings of the 41st International Conference on Machine Learning},
+  series = {ICML},
+  note = {Accepted},
+}
+</code></pre></div>
+
+<ul>
+<li>Cullen, Andrew C., Paul Montague, Shijie Liu, Sarah M. Erfani, and
+Benjamin I. P. Rubinstein. “Et Tu Certifications: Robustness
+Certificates Yield Better Adversarial Examples”. In: <em>Proceedings of
+the 41st International Conference on Machine Learning</em>. ICML.
+Accepted. 2024 [<a href="https://arxiv.org/abs/2302.04379">PDF</a>;
+<a style="cursor: pointer;" onclick="DownloadToFile('cullen2024et.bib', 'bibtex-cullen2024et')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
 <pre><code id="bibtex-cullen2023its">
 @inproceedings{cullen2023its,
   title = {It's Simplex! Disaggregating Measures to Improve Certified Robustness},
@@ -736,25 +757,6 @@ Interpretable Models”. In: <em>Proceedings of the IJCAI 2023 Workshop on
 XAI</em>. Co-located with IJCAI. Accepted. 2023 [<a
 href="https://drive.google.com/file/d/13MPWLMARWIKMJqeL2mazfQvOK6-QcmEG/view?usp=sharing">publisher
 link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('zhang2023comparison.bib', 'bibtex-zhang2023comparison')">BibTeX</a>]</li>
-</ul>
-
-<div class="bibox" style="display: none;">
-<pre><code id="bibtex-cullen2023exploiting">
-@misc{cullen2023exploiting,
-  title = {Exploiting Certified Defences to Attack Randomised Smoothing},
-  author = {Andrew C. Cullen and Paul Montague and Shijie Liu and Sarah M. Erfani and Benjamin I. P. Rubinstein},
-  note = {arXiv:2302.04379 [cs.LG]},
-  year = {2023},
-  month = {February},
-}
-</code></pre></div>
-
-<ul>
-<li>Cullen, Andrew C., Paul Montague, Shijie Liu, Sarah M. Erfani, and
-Benjamin I. P. Rubinstein. <em>Exploiting Certified Defences to Attack
-Randomised Smoothing</em>. arXiv:2302.04379 [cs.LG]. Feb. 2023 [<a
-href="https://arxiv.org/abs/2302.04379">PDF</a>;
-<a style="cursor: pointer;" onclick="DownloadToFile('cullen2023exploiting.bib', 'bibtex-cullen2023exploiting')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
